<resources>
    <string name="app_name">MealApp</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="full_name">Full Name</string>
    <string name="address">Address</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="register_an_account">Register an Account</string>
    <string name="register_terms_and_conditions">By registering an account, you accept all terms and conditions</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="enter_percentage">Enter Percentage</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="enter_minimun_price">Enter Minimun Price</string>
    <string name="enter_maximum_price">Enter Maximum Price</string>
    <string name="enter_exp_date">Enter Exp. Date</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="recent">Recent</string>
    <string name="status">Status</string>
    <string name="sign_up">SIGN UP</string>
    <string name="new_user">New User?</string>
</resources>
