<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:clickable="true"
    android:background="@color/white"
    android:orientation="vertical"
     android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">
    <EditText
        android:layout_gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:hint="@string/enter_percentage"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">
    <EditText
        android:layout_gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:hint="@string/enter_promo_code"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">
    <EditText
        android:layout_gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:hint="@string/enter_minimun_price"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">
    <EditText
        android:layout_gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionNext"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:hint="@string/enter_maximum_price"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">
    <EditText
        android:layout_gravity="center"
        android:maxLines="1"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:hint="@string/enter_exp_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp" />
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:background="@drawable/rounded_curv_green"
            android:text="@string/save"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_35sdp" />

        <TextView
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/rounded_curv_orange"
            android:gravity="center"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white"
            android:text="@string/reset"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_35sdp" />
    </LinearLayout>
</LinearLayout>
</layout>