<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".LoginActivity">

    <FrameLayout
        android:background="@color/transperent_black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp"
            android:text="Insert your email and password to login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/txt_act_login_email"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:gravity="center"
            android:hint="@string/email"
            android:textSize="@dimen/_14sdp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp" />
        <EditText
            android:id="@+id/txt_act_login_password"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:gravity="center"
            android:hint="@string/password"
            android:textSize="@dimen/_14sdp"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp" />
        <TextView
            android:id="@+id/btn_login"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginStart="@dimen/_50sdp"
            android:layout_marginEnd="@dimen/_50sdp"
            android:gravity="center"
            android:text="@string/login"
            android:textSize="@dimen/_14sdp"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            android:background="@drawable/rounded_orange"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/new_user"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/btn_new_user_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
</layout>